updated backend and README files
