# backend/check_models.py
@@ -1,15 +1,18 @@
 from models import *
 
+
 session = Session()
 
 companies = [
+	Company(name="No Company"),
 	Company(name="The Boring Team")
 ]
 session.add_all(companies)
 session.commit()
 teams = [
-	Team(tag="Front", name="Duo", company_id=1),
-	Team(tag="Back", name="Trio", company_id=1)
+	Team(tag="", name="No Team", company_id=1),
+	Team(tag="Front", name="Duo", company_id=2),
+	Team(tag="Back", name="Trio", company_id=2)
 ]
 session.add_all(teams)
 session.commit()
@@ -35,7 +38,7 @@ employees = [
 		is_owner=False,
 		password="qwer",
 		phone="38010101010",
-		date_of_birth="2022-26-10",
+		date_of_birth="2003-12-30",
 		role=True
 	),
 	Employee(
@@ -79,10 +82,30 @@ session.add_all(employees)
 session.commit()
 propertySets = [
 	PropertySet(
-		name="Default"
+		name="Default",
+		company_id=1
 	)
 ]
 session.add_all(propertySets)
+session.commit()
+preAnswers = [
+	PreAnswer(
+		text="No noticeable progress",
+		numeric_value=0,
+		property_set_id=1
+	),
+	PreAnswer(
+		text="Steady progress in most areas",
+		numeric_value=1,
+		property_set_id=1
+	),
+	PreAnswer(
+		text="Significant progress in most areas",
+		numeric_value=2,
+		property_set_id=1
+	)
+]
+session.add_all(preAnswers)
 session.commit()
 questions = [
 	Question(
@@ -126,28 +149,28 @@ session.add_all(feedbackHistories)
 session.commit()
 feedbacks = [
 	Feedback(
-		date_of_creation="2022-10-26",
-		note="Perfect Employee",
+		date_of_creation="2022-10-27",
+		note="Bohdan is a valuable worker",
 		employee_id=1
 	),
 	Feedback(
-		date_of_creation="2022-10-26",
-		note="Perfect Employee",
+		date_of_creation="2022-10-27",
+		note="Danylo is a valuable worker",
 		employee_id=2
 	),
 	Feedback(
-		date_of_creation="2022-10-26",
-		note="Perfect Employee",
+		date_of_creation="2022-10-27",
+		note="Olena is a valuable worker",
 		employee_id=3
 	),
 	Feedback(
-		date_of_creation="2022-10-26",
-		note="Perfect Employee",
+		date_of_creation="2022-10-27",
+		note="Sofiia is a valuable worker",
 		employee_id=4
 	),
 	Feedback(
-		date_of_creation="2022-10-26",
-		note="Perfect Employee",
+		date_of_creation="2022-10-27",
+		note="Andrii is a valuable worker",
 		employee_id=5
 	)
 ]
@@ -156,77 +179,78 @@ session.commit()
 answers = [
 	Answer(
 		number=1,
-		text="No noticeable progress",
-		feedback_id=1
-	),
-	Answer(
-		number=2,
-		text="Steady progress in most areas",
-		feedback_id=1
-	),
-	Answer(
-		number=3,
-		text="Significant progress in most areas",
-		feedback_id=1
-	),
-	Answer(
-		number=1,
-		text="No noticeable progress",
-		feedback_id=2
-	),
-	Answer(
-		number=2,
-		text="Steady progress in most areas",
-		feedback_id=2
-	),
-	Answer(
-		number=3,
-		text="Significant progress in most areas",
-		feedback_id=2
-	),
-	Answer(
-		number=1,
-		text="No noticeable progress",
-		feedback_id=3
-	),
-	Answer(
-		number=2,
-		text="Steady progress in most areas",
-		feedback_id=3
-	),
-	Answer(
-		number=3,
-		text="Significant progress in most areas",
-		feedback_id=3
-	), Answer(
-		number=1,
-		text="No noticeable progress",
-		feedback_id=4
-	),
-	Answer(
-		number=2,
-		text="Steady progress in most areas",
-		feedback_id=4
-	),
-	Answer(
-		number=3,
-		text="Significant progress in most areas",
-		feedback_id=4
-	),
-	Answer(
-		number=1,
-		text="No noticeable progress",
+		pre_answer_id=1,
 		feedback_id=5
 	),
 	Answer(
 		number=2,
-		text="Steady progress in most areas",
+		pre_answer_id=2,
 		feedback_id=5
 	),
 	Answer(
 		number=3,
-		text="Significant progress in most areas",
+		pre_answer_id=3,
 		feedback_id=5
+	),
+	Answer(
+		number=1,
+		pre_answer_id=2,
+		feedback_id=4
+	),
+	Answer(
+		number=2,
+		pre_answer_id=3,
+		feedback_id=4
+	),
+	Answer(
+		number=3,
+		pre_answer_id=1,
+		feedback_id=4
+	),
+	Answer(
+		number=1,
+		pre_answer_id=2,
+		feedback_id=3
+	),
+	Answer(
+		number=2,
+		pre_answer_id=3,
+		feedback_id=3
+	),
+	Answer(
+		number=3,
+		pre_answer_id=1,
+		feedback_id=3
+	),
+	Answer(
+		number=1,
+		pre_answer_id=2,
+		feedback_id=2
+	),
+	Answer(
+		number=2,
+		pre_answer_id=2,
+		feedback_id=2
+	),
+	Answer(
+		number=3,
+		pre_answer_id=1,
+		feedback_id=2
+	),
+	Answer(
+		number=1,
+		pre_answer_id=1,
+		feedback_id=1
+	),
+	Answer(
+		number=2,
+		pre_answer_id=3,
+		feedback_id=1
+	),
+	Answer(
+		number=3,
+		pre_answer_id=2,
+		feedback_id=1
 	)
 ]
 session.add_all(answers)
